tests/fail_nightly/raw_string.stderr
error: Missing Type for given '{}'
 --> $DIR/raw_string.rs:2:33
  |
2 |     sscanf::scanf!("hi", r#"asdf{}asdf"#);
  |                                 ^^
